--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ a {
   padding-top: 100px;
 }
 
-.tittle {
+.title {
   font-family: "Impact", sans-serif;
   font-weight: 400;
   font-size: 76px;
@@ -155,7 +155,7 @@ a {
   display: block;
 }
 
-.info__tittle {
+.info__title {
   text-transform: uppercase;
   margin-bottom: 30px;
   font-weight: 300;
@@ -220,13 +220,13 @@ a {
   background-size: cover;
 }
 
-.track__inner{
+.track__inner {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
 }
 
-.track__tittle {
+.track__title {
   padding-top: 50px;
   padding-bottom: 30px;
   font-size: 32px;
@@ -241,7 +241,6 @@ a {
   margin: auto auto 90px auto;
 }
 
-
 /* Варіант 1, якщо без блоку <div class="track__inner"> */
 /* .track__img {
   margin: 0 auto;
@@ -250,10 +249,194 @@ a {
 } */
 /* #endregion */
 
-/* #region XXXX */
+/* #region Evo */
+.evo {
+  font-size: 14px;
+  margin-bottom: 100px;
+}
+
+.evo-black {
+  background-color: #363636;
+  padding: 100px 0 50px;
+  color: #fff;
+}
+
+.evo-black__inner {
+  position: relative;
+}
+
+.evo-black__inner::before {
+  content: "";
+  background-image: url("../images/dec-1.svg");
+  position: absolute;
+  width: 185px;
+  height: 213px;
+  top: 210px;
+  left: -130px;
+}
+
+.evo-black__inner::after {
+  content: "";
+  background-image: url("../images/dec-2.svg");
+  position: absolute;
+  width: 498px;
+  height: 572px;
+  top: 290px;
+  left: -40px;
+}
+
+.evo-black__info {
+  display: flex;
+  justify-content: space-between;
+}
+
+.evo-black__title {
+  text-transform: uppercase;
+  font-size: 32px;
+  font-weight: 300;
+  padding-right: 50px;
+}
+
+.evo-black__infobox {
+  flex-basis: 437px;
+}
+
+.evo-balck__text {
+  font-size: 14px;
+  margin-bottom: 30px;
+}
+
+.evo-black__img {
+  display: block;
+  margin: 170px auto 60px;
+  position: relative;
+  z-index: 1;
+}
+
+.evo__descr-list {
+  display: flex;
+  justify-content: center;
+  gap: 0 65px;
+}
+
+.evo__descr-list dd {
+  text-transform: uppercase;
+}
+
+.evo-white__inner {
+  padding-top: 125px;
+  position: relative;
+}
+
+.evo-white__inner::before {
+  content: "";
+  background-image: url("../images/dec-3.png");
+  position: absolute;
+  width: 274px;
+  height: 257px;
+  top: -40px;
+  left: 360px;
+}
+
+.evo-white__inner::after {
+  content: "";
+  background-image: url("../images/dec-4.png");
+  position: absolute;
+  width: 324px;
+  height: 311px;
+  top: 115px;
+  left: 600px;
+}
+
+.evo-white__text {
+  margin-bottom: 30px;
+}
+
+.evo-white__text:first-child {
+  max-width: 285px;
+}
+
+.evo-white__text:nth-child(2) {
+  max-width: 437px;
+}
+
+.evo-white__text:nth-child(3) {
+  max-width: 509px;
+}
+
+.evo-white__video {
+  margin-top: 100px;
+  background-image: url(../images/evo-video.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 264px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.evo-white__video-link span {
+  display: block;
+  color: #fff;
+}
 /* #endregion */
 
-/* #region XXXX */
+/* #region Blog */
+.blog {
+  margin-bottom: 100px;
+}
+
+.blog__title {
+  font-size: 32px;
+  font-weight: 300;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+}
+
+.blog__item-img {
+  margin-bottom: 20px;
+}
+
+.blog__item-title {
+  font-weight: 400;
+  font-size: 20px;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+  min-height: 46px;
+}
+
+.blog__item-text {
+  margin-bottom: 10px;
+}
+
+.blog__item-link {
+  font-size: 12px;
+  color: #363636;
+}
+
+.blog__slider{
+position: relative;
+padding-top: 50px;
+margin-bottom: 100px;
+}
+
+.blog__button {
+position: absolute;
+top: 0;
+cursor: pointer;
+left: 50%;
+}
+
+.swiper-button-left{
+  transform: translateX(-41px);
+
+}
+
+.swiper-button-right{
+  transform: translateX(8px);
+}
 /* #endregion */
 
 /* #region XXXX */
