--- a/css/style.css
+++ b/css/style.css
@@ -437,6 +437,38 @@ left: 50%;
 .swiper-button-right{
   transform: translateX(8px);
 }
+
+.blog__quote {
+  display: flex;
+  justify-content: space-between;
+  gap: 0 20px;
+}
+
+.blog__quote-box {
+  flex-basis: 434px;
+}
+
+.blockquote {
+  margin-bottom: 30px;
+}
+
+.blockquote__name {
+font-weight: 700;
+margin-bottom: 10px;
+display: inline-block;
+}
+
+.blockquote__name span {
+  display: block;
+  font-size: 12px;
+  color: #9f6b08;
+  margin-bottom: 3px;
+  
+}
+
+.blockquote__text {
+font-style: italic;  
+}
 /* #endregion */
 
 /* #region XXXX */
