--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,10 @@ a {
   margin: 0 auto;
 }
 
+li {
+  list-style: none;
+}
+
 .container {
   max-width: 920px;
   padding: 0 10px;
@@ -416,25 +420,24 @@ a {
   color: #363636;
 }
 
-.blog__slider{
-position: relative;
-padding-top: 50px;
-margin-bottom: 100px;
+.blog__slider {
+  position: relative;
+  padding-top: 50px;
+  margin-bottom: 100px;
 }
 
 .blog__button {
-position: absolute;
-top: 0;
-cursor: pointer;
-left: 50%;
+  position: absolute;
+  top: 0;
+  cursor: pointer;
+  left: 50%;
 }
 
-.swiper-button-left{
+.swiper-button-left {
   transform: translateX(-41px);
-
 }
 
-.swiper-button-right{
+.swiper-button-right {
   transform: translateX(8px);
 }
 
@@ -453,9 +456,9 @@ left: 50%;
 }
 
 .blockquote__name {
-font-weight: 700;
-margin-bottom: 10px;
-display: inline-block;
+  font-weight: 700;
+  margin-bottom: 10px;
+  display: inline-block;
 }
 
 .blockquote__name span {
@@ -463,15 +466,75 @@ display: inline-block;
   font-size: 12px;
   color: #9f6b08;
   margin-bottom: 3px;
-  
 }
 
 .blockquote__text {
-font-style: italic;  
+  font-style: italic;
 }
 /* #endregion */
 
-/* #region XXXX */
+/* #region Footer */
+.footer {
+  padding: 100px 0 80px;
+  background-color: #363636;
+  color: #fff;
+}
+
+.footer__title {
+  text-transform: uppercase;
+  margin-bottom: 50px;
+  font-weight: 300;
+  font-size: 32px;
+}
+
+.footer__top {
+  display: flex;
+  justify-content: space-between;
+  gap: 0 20px;
+}
+
+.footer__info-item {
+  margin-bottom: 40px;
+}
+
+.footer__address-title, 
+.footer__info-item dt {
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.footer__info-item dd {
+  margin-bottom: 10px;
+}
+
+.social-list {
+  display: flex;
+  gap: 0 20px;
+  align-items: center;
+}
+
+.footer__address {
+  flex-basis: 462px;
+}
+
+#map {
+  height: 250px;
+}
+
+.footer__address-text {
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+.footer__bottom {
+  margin-top: 35px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 /* #endregion */
 
 /* #region XXXX */
