--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ li {
   font-family: "Impact", sans-serif;
   font-weight: 400;
   font-size: 48px;
-  border-block-start: 1px solid #040404;
+  border-bottom: 1px solid #040404;
   margin-bottom: 10px;
 }
 
@@ -497,7 +497,7 @@ li {
   margin-bottom: 40px;
 }
 
-.footer__address-title, 
+.footer__address-title,
 .footer__info-item dt {
   margin-bottom: 20px;
   text-transform: uppercase;
@@ -537,17 +537,124 @@ li {
 
 /* #endregion */
 
-/* #region XXXX */
-/* #endregion */
+.menu-mobile,
+.menu-btn {
+  display: none;
+}
+/* #region Adaptive */
+@media (max-width: 1100px) {
+  .promo {
+    background-position: left center;
+  }
 
-/* #region XXXX */
-/* #endregion */
+  .menu-list {
+    display: none;
+  }
 
-/* #region XXXX */
-/* #endregion */
+  .menu-mobile {
+    display: flex;
+    gap: 0 20px;
+  }
 
-/* #region XXXX */
-/* #endregion */
+  .logo-img {
+    width: 50px;
+  }
 
-/* #region XXXX */
+  .nav {
+    align-items: center;
+  }
+
+  .title {
+    font-size: 64px;
+    letter-spacing: 0.08em;
+  }
+
+  .subtitle {
+    font-size: 42px;
+  }
+
+  .subtitle span {
+    font-size: 32px;
+  }
+}
+
+@media (max-width: 820px) {
+  .menu-btn {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 45px;
+    height: 30px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    z-index: 10;
+  }
+
+  .menu-btn span {
+    height: 3px;
+    width: 100%;
+    background-color: #fff;
+  }
+
+  .menu-mobile {
+    display: none;
+  }
+
+  .menu-mobile.menu--open {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #000;
+    height: 100vh;
+    z-index: 5;
+    text-align: center;
+    padding-top: 140px;
+  }
+
+  .menu-link {
+    color: #fff;
+    font-size: 3vh;
+    display: block;
+    padding: 20px 0;
+  }
+  .logo {
+    z-index: 10;
+  }
+}
+
+@media (max-width: 560px) {
+  .title {
+    font-size: 48px;
+    letter-spacing: 0.08em;
+    margin: 0;
+  }
+  .subtitle {
+    font-size: 34px;
+  }
+  .subtitle span {
+    font-size: 26px;
+  }
+}
+
+@media (max-width: 340px) {
+  .title {
+    font-size: 42px;
+    letter-spacing: 0.08em;
+    margin: 0;
+  }
+  .subtitle {
+    font-size: 30px;
+  }
+}
+
+@media (max-width: 320px) {
+.menu-link {
+  padding: 15px;
+}
+}
 /* #endregion */
